--- a/index.html
+++ b/index.html
@@ -4,38 +4,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    /* Hide the second column */
-    td:nth-child(2),
-    th:nth-child(2) {
-      display: none;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
   <title>HTML Table</title>
 </head>
  
 <body>
-  <table>
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Age</th>
-        <th>City</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>John</td>
-        <td>25</td>
-        <td>New York</td>
-      </tr>
-      <tr>
-        <td>Jane</td>
-        <td>30</td>
-        <td>Los Angeles</td>
-      </tr>
-    </tbody>
-  </table>
+<div id="container">
+
+<div>
+  <input type="checkbox" id="label1">
+  <h2><label for="label1">First Label</label></h2>
+  <div id="pane">
+    <p>Hide or display this text on click.</p>
+  </div>
+</div>
+
+<div>
+  <input type="checkbox" id="label2">
+  <h2><label for="label2">Second Label</label></h2>
+  <div id="pane">
+    <p>Hide or display this text on click.</p>
+  </div>
+</div>
+
+</div>
 </body>
  
 </html>
