--- a/index.html
+++ b/index.html
@@ -10,24 +10,44 @@
  
 <body>
 <div id="container">
+  <div>
+    <input type="checkbox" id="label1">
+    <h2><label for="label1">First Label</label></h2>
+    <div id="pane">
+      <p>Hide or display this text on click.</p>
+    </div>
+  </div>
 
-<div>
-  <input type="checkbox" id="label1">
-  <h2><label for="label1">First Label</label></h2>
-  <div id="pane">
-    <p>Hide or display this text on click.</p>
+  <div>
+    <input type="checkbox" id="label2">
+    <h2><label for="label2">Second Label</label></h2>
+    <div id="pane">
+      <p>Hide or display this text on click.</p>
+      <table>
+        <tr>
+          <th>Company</th>
+          <th>Contact</th>
+          <th>Country</th>
+        </tr>
+        <tr>
+          <td>Alfreds Futterkiste</td>
+          <td>Maria Anders</td>
+          <td>Germany</td>
+        </tr>
+        <tr>
+          <td>Centro comercial Moctezuma</td>
+          <td>Francisco Chang</td>
+          <td>Mexico</td>
+        </tr>
+      </table> 
+
+
+    </div>
   </div>
 </div>
 
-<div>
-  <input type="checkbox" id="label2">
-  <h2><label for="label2">Second Label</label></h2>
-  <div id="pane">
-    <p>Hide or display this text on click.</p>
-  </div>
-</div>
 
-</div>
+
 </body>
  
 </html>
